<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:theme="@style/Theme2"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_experiment"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/toggleLL"/>

    <LinearLayout
        android:id="@+id/toggleLL"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="top"
        android:layout_marginStart="7dp"
        android:gravity="top"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="Baseline"
            android:textSize="25sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/baselineVsTesting"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/baseline_vs_testing_toggle"
            android:gravity="center_vertical"
            android:textOff="@string/t"
            android:textOn="@string/b"
            app:switchMinWidth="50sp"
            app:switchPadding="5dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Testing"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintBottom_toTopOf="@id/nameTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleLL">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingTop="12dp"
            android:text="@string/welcome_description"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/nameTextBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <Button
                android:id="@+id/btn_CRT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rectangle_shape"
                android:padding="10dp"
                android:text="@string/task_1"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/btn_STM"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_STM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rectangle_shape"
                android:padding="10dp"
                android:text="@string/task_2"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/btn_SRT"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_CRT" />

            <Button
                android:id="@+id/btn_SRT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rectangle_shape"
                android:padding="10dp"
                android:text="@string/task_3"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/btn_B"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_STM" />

            <Button
                android:id="@+id/btn_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rectangle_shape"
                android:padding="10dp"
                android:text="@string/task_4"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/btn_M"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_SRT" />

            <Button
                android:id="@+id/btn_M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rectangle_shape"
                android:padding="10dp"
                android:text="@string/task_5"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_B" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/nameTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_user_id"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/new_id_button"
        app:layout_constraintEnd_toStartOf="@+id/displayIdBox"
        app:layout_constraintStart_toStartOf="@+id/new_id_button"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/displayIdBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-1000"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/nameTextBox"
        app:layout_constraintEnd_toEndOf="@+id/new_id_button"
        app:layout_constraintStart_toEndOf="@+id/nameTextBox"
        app:layout_constraintTop_toTopOf="@+id/nameTextBox" />


    <Button
        android:id="@+id/new_id_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Click here\n for a new Id"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextBox" />

</androidx.constraintlayout.widget.ConstraintLayout>
